Rename 資料科學概論.Rmd to 向量 資料框架.Rmd

--- a/向量 資料框架.Rmd
+++ b/向量 資料框架.Rmd
@@ -41,8 +41,8 @@ my_mat[filter]
 team_name <- c("Chicago Bulls", "Golden State Warriors") wins <- c(72, 73) losses <- c(10, 9)
 is_champion <- c(TRUE, FALSE) season <- c("1995-96", "2015-16")
 great_nba_teams <- data.frame(team_name, wins, losses, is_champion, season, stringsAsFactors = FALSE)
-# §Q§Q???¥Î `$ÅÜ¼Æ¦WºÙ` great_nba_teams$___
-# §Q§Q???¥Î`[, "ÅÜ¼Æ¦WºÙ"]` greate_nba_teams[, "___"]
+# åˆ©åˆ©???ç”¨ `$è®Šæ•¸åç¨±` great_nba_teams$___
+# åˆ©åˆ©???ç”¨`[, "è®Šæ•¸åç¨±"]` greate_nba_teams[, "___"]
 
 weekdays <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday") 
 favorite_day <- weekdays[Friday] 
